--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -18,13 +19,19 @@
   <body>
     <!-- Main Content -->
     <main>
-    <section class="gallery">
-      <div class="gallery__try">
+
+
+
+    <section class="gallery ">
+      <div class="gallery__try ">
         <p class="hidden-visally">Галерея</p>
       </div>
-      <div class="gallery__picture">
-    <a href=""><img src="img/brooke-lark-8beTH4VkhLI-unsplash 1.png" alt="photo" width="1200" height="422" class="foto" /></a>
+      <div class="gallery__picture ">
+    <a href=""><img src="img/brooke-lark-8beTH4VkhLI-unsplash 1.png" alt="photo" width="1200" height="422" class="gallery__foto animate__animated animate__bounce animate__jackInTheBox" /></a>
 </div>
+
+
+
     </section>
     </main>
   </body>
